// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading renders correctly 1`] = `
<div
  class="cloud-loading"
>
  <div
    class="cloud-loading-container"
  >
    <div
      class="cloud-loading-animation"
    >
      <svg
        class="circular"
        viewBox="25 25 50 50"
      >
        <circle
          class="path"
          cx="50"
          cy="50"
          r="18"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Loading renders different size 1`] = `
<div
  class="cloud-loading"
>
  <div
    class="cloud-loading-container"
  >
    <div
      class="cloud-loading-animation"
    >
      <svg
        class="circular"
        viewBox="25 25 50 50"
      >
        <circle
          class="path"
          cx="50"
          cy="50"
          r="13"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Loading renders different size 2`] = `
<div
  class="cloud-loading"
>
  <div
    class="cloud-loading-container"
  >
    <div
      class="cloud-loading-animation"
    >
      <svg
        class="circular"
        viewBox="25 25 50 50"
      >
        <circle
          class="path"
          cx="50"
          cy="50"
          r="18"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Loading renders different size 3`] = `
<div
  class="cloud-loading"
>
  <div
    class="cloud-loading-container"
  >
    <div
      class="cloud-loading-animation"
    >
      <svg
        class="circular"
        viewBox="25 25 50 50"
      >
        <circle
          class="path"
          cx="50"
          cy="50"
          r="23"
        />
      </svg>
    </div>
  </div>
</div>
`;
